--- a/portfolio.html
+++ b/portfolio.html
@@ -651,9 +651,9 @@ integrity and smooth integration across services
                                 <h4><b>Quiz-O-Mania-The Quiz Conducting Portal</b> <a href="https://github.com/Ayush-2019/QUIZ-O-MANIA_THE-QUIZ-CONDUCTING-PORTAL"><img src="./link.png" alt="link" width="20px" height="20px"></a></h4>
                                 <ul>
 
-                                    <li>Robust e-commerce application</li>
-                                    <li>Comprising 6+ REST APIs and 11 data filters</li>
-                                    <li>React Redux for State Management and Auth Guards for Secure APIs</li>
+                                    <li>One Stop quiz solution with responsive mobile friendly UI</li>
+                                    <li>Handles 1000s of concurrent quizzes</li>
+                                    <li>Secure APIs with Angular Guards</li>
                                 
                                 </ul>
                                 <div class="mt-3">
@@ -676,9 +676,9 @@ integrity and smooth integration across services
                     <h4><b>Post Book-Social Media Application</b> <a href="https://github.com/Ayush-2019/Post-Book-Social-Media-App-Django"><img src="./link.png" alt="link" width="20px" height="20px"></a></h4>
                     <ul>
 
-                        <li>Robust e-commerce application</li>
-                        <li>Comprising 6+ REST APIs and 11 data filters</li>
-                        <li>React Redux for State Management and Auth Guards for Secure APIs</li>
+                        <li>Social media built with Django & REST APIs</li>
+                        <li>Core engagement features: posts, comments, likes, follows</li>
+                        <li>Follow-recommendation system driving 50% user growth</li>
 
                     </ul>
                     <div class="mt-3">
@@ -700,9 +700,9 @@ integrity and smooth integration across services
                     <h4><b>Sports Team Application</b> <a href="https://github.com/Ayush-2019/SPORTS-TEAM-WEBSITE_REACTJS_FIREBASE"><img src="./link.png" alt="link" width="20px" height="20px"></a></h4>
                     <ul>
 
-                        <li>Robust e-commerce application</li>
-                        <li>Comprising 6+ REST APIs and 11 data filters</li>
-                        <li>React Redux for State Management and Auth Guards for Secure APIs</li>
+                        <li>Responsive sports data platform built with React & Firebase</li>
+                        <li>Secure Firebase Auth with real-time data and image uploads</li>
+                        <li>Polished UI using Material UI and Stripe-style animations</li>
 
                     </ul>
                     <div class="mt-3">
@@ -725,14 +725,16 @@ integrity and smooth integration across services
                     <h4><b>Event Booking Application</b> <a href="https://github.com/Ayush-2019/EVENT-BOOKING-APP-GRAPHQL"><img src="./link.png" alt="link" width="20px" height="20px"></a></h4>
                     <ul>
 
-                        <li>Robust e-commerce application</li>
-                        <li>Comprising 6+ REST APIs and 11 data filters</li>
-                        <li>React Redux for State Management and Auth Guards for Secure APIs</li>
+                        <li>Event management platform with authenticated bookings & creation</li>
+                        <li>GraphQL-based API using a single endpoint for all queries</li>
+                        <li>70% payload reduction → faster performance and lower costs</li>
 
                     </ul>
                     <div class="mt-3">
                         <span class="skill-tag">GraphQL(Backend)</span>
                         <span class="skill-tag">ReactJS(Frontend)</span>
+                        <span class="skill-tag">AWS(Cloud)</span>
+                        <span class="skill-tag">MaterialUI(Interface)</span>
  
                     </div>
                     </div>
@@ -749,9 +751,9 @@ integrity and smooth integration across services
                     <h4><b>Cloud Infra for Web Services</b> <a href="https://github.com/Ayush-2019/tf-gcp-infra-fork"><img src="./link.png" alt="link" width="20px" height="20px"></a></h4>
                     <ul>
 
-                        <li>Robust e-commerce application</li>
-                        <li>Comprising 6+ REST APIs and 11 data filters</li>
-                        <li>React Redux for State Management and Auth Guards for Secure APIs</li>
+                        <li>Fully automated GCP infrastructure with Terraform, Packer & GitHub Actions</li>
+                        <li>CI/CD pipeline with GitHub Actions enabling zero-touch deployments</li>
+                        <li>Scalable, event-driven cloud architecture with 95% downtime reduction</li>
 
                     </ul>
                     <div class="mt-3">
