--- a/portfolio.html
+++ b/portfolio.html
@@ -892,12 +892,32 @@ integrity and smooth integration across services
                 </div>
                 <div class="col-lg-6">
                     <div class="skill-category fade-in">
-                        <h4><i class="fas fa-brain"></i> Core Competencies</h4>
-                        <span class="skill-tag">Problem Solving</span>
-                        <span class="skill-tag">Algorithm Analysis</span>
-                        <span class="skill-tag">Code Optimization</span>
-                        <span class="skill-tag">Debugging</span>
-                        <span class="skill-tag">Technical Documentation</span>
+                        <h4><i class="fas fa-brain"></i> AI & ML</h4>
+                        
+                        <div class="skill-item"><span>LLMs</span>
+                        </div>
+
+                        <div class="skill-item"><span>RAG</span>
+                        </div>
+
+                        <div class="skill-item"><span>LLMs</span>
+                        </div>
+
+                        <div class="skill-item"><span>QLoRA/LoRA</span>
+                        </div>
+
+                        <div class="skill-item"><span>Hugging Face</span>
+                        </div>
+
+                        <div class="skill-item"><span>LangChain</span>
+                        </div>
+
+                        <div class="skill-item"><span>OpenAI</span>
+                        </div>
+
+
+
+
                     </div>
                 </div>
             </div>
