--- a/portfolio.html
+++ b/portfolio.html
@@ -605,7 +605,7 @@
         .education-image img {
             width: 100%;
             height: 100%;
-            object-fit: contain;
+            object-fit: fill;
         }
 
         .education-text h3 {
@@ -819,6 +819,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#intro">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
@@ -863,7 +864,7 @@
                         </div>
                         <div class="card-content">
                             <h4>Software Engineer</h4>
-                            <p class="company">DeepThink Health</p>
+                            <p class="company">DeepThink Health (San Ramon, CA)</p>
                             <ul>
                                 
                             <li>Developed and deployed 11 RESTful APIs with Java Spring Boot in an Agile-Scrum SDLC powering a healthcare
@@ -882,12 +883,12 @@ supporting strategic procurement decisions</li>
                     </div>
                     <div class="experience-card fade-in">
                         <div class="card-logo">
-                            <img src="./neu.JPG" alt="NEU Logo">
+                            <img src="./neuW.JPG" alt="NEU Logo">
                             <!-- Replace with: <img src="path/to/research-logo.png" alt="Algorithm Research Logo"> -->
                         </div>
                         <div class="card-content">
                             <h4>Software Engineer</h4>
-                            <p class="company">Northeastern University</p>
+                            <p class="company">Northeastern University (Boston, MA)</p>
                             <ul>
                                 <li>Automated provisioning of 15+ AWS services (EC2, RDS, IAM, S3, SQS, etc.) with Terraform, and streamlined
 Jenkins CI/CD pipelines, accelerating release cycles and cutting environment setup time from hours to 20 minutes
@@ -910,7 +911,7 @@ high-frequency queries</li>
                         </div>
                         <div class="card-content">
                             <h4>Software development Engineer</h4>
-                            <p class="company">Broomling Technologies</p>
+                            <p class="company">Broomling Technologies (Indore, India)</p>
                             <ul>
                                 <li>Spearheaded the development of a React-based dashboard with 10+ reusable components and OAuth based login,
 cutting rendering overhead by 20% and improving engagement that contributed to $84K in new revenue
@@ -943,14 +944,15 @@ integrity and smooth integration across services
                             <div class="education-item active">
                                 <div class="education-box">
                                     <div class="education-image">
-                                        <img src="https://via.placeholder.com/150/6366f1/ffffff?text=NEU" alt="Northeastern University">
+                                        <img src="./neu.JPG" alt="Northeastern University" class="rounded rounded-circle">
                                         <!-- Replace: <img src="images/neu-logo.png" alt="Northeastern University"> -->
                                     </div>
                                     <div class="education-text">
                                         <h3>Northeastern University</h3>
-                                        <h4>Master of Science in Computer Science</h4>
-                                        <p class="year">2023 - 2025</p>
-                                        <p class="description">Specializing in algorithms, data structures, and software engineering with focus on competitive programming and system design.</p>
+                                        <h4>Master of Science in Computer Software Engineering</h4>
+                                        <p class="year">2023 - 2025 | Boston, MA (GPA: 3.838)</p>
+                                        <p class="description"><b>Coursework: </b>Application Engineering & Design, Web Development, Network Structures & Cloud Computing,
+Concepts of Object Oriented Design, Program Structures & Algorithms, Agile Software Development</p>
                                     </div>
                                 </div>
                             </div>
@@ -959,14 +961,14 @@ integrity and smooth integration across services
                             <div class="education-item">
                                 <div class="education-box">
                                     <div class="education-image">
-                                        <img src="https://via.placeholder.com/150/8b5cf6/ffffff?text=UNI" alt="Your University">
+                                        <img src="./gcet.JPG" alt="Your University" class="rounded rounded-circle">
                                         <!-- Replace: <img src="images/undergrad-logo.png" alt="Your University"> -->
                                     </div>
                                     <div class="education-text">
-                                        <h3>Your Undergraduate University</h3>
-                                        <h4>Bachelor of Technology in Computer Science</h4>
-                                        <p class="year">2019 - 2023</p>
-                                        <p class="description">Built strong foundation in programming, algorithms, and software development with academic honors and research experience.</p>
+                                        <h3>Galgotias College (G.C.E.T.)</h3>
+                                        <h4>Bachelor of Technology in Information Technology</h4>
+                                        <p class="year">2017 - 2021 | Greater Noida, India</p>
+                                        <p class="description"><b>Coursework:</b> Python Programming, Data Structures & Algorithms, Machine Learning, Artificial Intelligence</p>
                                     </div>
                                 </div>
                             </div>
