--- a/portfolio.html
+++ b/portfolio.html
@@ -425,9 +425,9 @@
         }
 
         .cert-image-link img {
-            width: 150px;
+            width: 200px;
             height: 150px;
-            border-radius: 50%;
+            /* border-radius: 50%; */
             object-fit: cover;
             border: 4px solid rgba(99, 102, 241, 0.3);
             box-shadow: 0 10px 30px rgba(99, 102, 241, 0.2);
@@ -1347,7 +1347,7 @@ Concepts of Object Oriented Design, Program Structures & Algorithms, Agile Softw
         <div class="container">
             <h2 class="section-title fade-in">Get In Touch</h2>
             <div class="row">
-                <div class="col-lg-8 mx-auto">
+                <div class="col-md-8 mx-auto">
                     <div class="contact-info fade-in">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
