--- a/index.html
+++ b/index.html
@@ -1281,7 +1281,7 @@ Concepts of Object Oriented Design, Program Structures & Algorithms, Agile Softw
                         <div class="skill-item"><span>RAG</span>
                         </div>
 
-                        <div class="skill-item"><span>LLMs</span>
+                        <div class="skill-item"><span>Vector DBs</span>
                         </div>
 
                         <div class="skill-item"><span>QLoRA/LoRA</span>
@@ -1347,7 +1347,7 @@ Concepts of Object Oriented Design, Program Structures & Algorithms, Agile Softw
         <div class="container">
             <h2 class="section-title fade-in">Get In Touch</h2>
             <div class="row">
-                <div class="col-md-8 mx-auto">
+                <div class="col-lg-8 mx-auto">
                     <div class="contact-info fade-in">
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
@@ -1398,7 +1398,7 @@ Concepts of Object Oriented Design, Program Structures & Algorithms, Agile Softw
         const typedTextElement = document.getElementById('typed-text');
         const textArray = [
             'MS in CSE @ NEU',
-            'Former Software and AI Engineer @ DeepThink Health',
+            'Software and AI Engineer',
             'Problem Solver',
             'Turning Quality Code to Scalable Business Solution'
         ];
