--- a/index.html
+++ b/index.html
@@ -1192,6 +1192,14 @@ Concepts of Object Oriented Design, Program Structures & Algorithms, Agile Softw
                             </div>
                             <span>SQL</span>
                         </div>
+                        <div class="skill-item">
+                            <div class="skill-logo">
+                                
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original-wordmark.svg" />
+          
+                            </div>
+                            <span>MongoDB</span>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
