--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@ high-frequency queries</li>
                             <!-- Replace with: <img src="path/to/research-logo.png" alt="Algorithm Research Logo"> -->
                         </div>
                         <div class="card-content">
-                            <h4>Software development Engineer</h4>
+                            <h4>Software Development Engineer</h4>
                             <p class="company">Broomling Technologies (Indore, India)</p>
                             <ul>
                                 <li>Spearheaded the development of a React-based dashboard with 10+ reusable components and OAuth based login,
